--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Deutschland-Ein-Wintermarchen_6079
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Heine, Heinrich
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1049
     wikipedia: http://en.wikipedia.org/wiki/Heinrich_Heine
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6079#Deutschland-Ein-Wintermarchen
 gutenberg_bookshelf: DE Lyrik
 gutenberg_issued: '2004-07-01'
 gutenberg_type: Text
